--- a/_posts/2024-08-05-ROM.md
+++ b/_posts/2024-08-05-ROM.md
@@ -1,4 +1,4 @@
-In modern personal computers, the ROM, specifically used for storing the BIOS or UEFI firmware, typically ranges in size from **4 MB to 32 MB**. 
+In modern personal computers, the ROM, specifically used for storing the BIOS or UEFI firmware, typically ranges in size of from **4 MB to 32 MB**. 
 
 - **BIOS (Basic Input/Output System):** In older systems, the ROM size for BIOS was usually around 1 MB to 8 MB. However, as firmware has become more complex with additional features and graphical interfaces, the size has increased.
 
