--- a/_posts/2024-08-20-ENGLISH1.md
+++ b/_posts/2024-08-20-ENGLISH1.md
@@ -28,3 +28,19 @@
    - c) She doesn't likes going to the gym.  
    - d) She don't likes going to the gym.
 ```
+
+
+
+
+
+1. **Synonyms:**  
+   **Answer:** c) Frank
+
+2. **Antonyms:**  
+   **Answer:** d) Depressed
+
+3. **Fill in the Blanks:**  
+   **Answer:** a) Pleased
+
+4. **Sentence Correction:**  
+   **Answer:** b) She doesn't like going to the gym.
