Logistic Regression Added

--- a/_posts/2024-08-20-ENGLISH1.md
+++ b/_posts/2024-08-20-ENGLISH1.md
@@ -22,7 +22,7 @@
    - d) Disappointed  
 
 4. **Sentence Correction:**  
-   Identify the correct sentence:  
+   Identify the correct sentence:   [text](<../../test2/_posts/2024-08-05-Linear Regression.md>)
    - a) She don't like going to the gym.  
    - b) She doesn't like going to the gym.  
    - c) She doesn't likes going to the gym.  
