New Pages  Added

--- a/_posts/2024-08-20-ENGLISH2.md
+++ b/_posts/2024-08-20-ENGLISH2.md
@@ -28,7 +28,7 @@
    - d) They was late for the meeting.
 
 ---
-<!-- 
+
 **Answers:**
 
 1. **Synonyms:**  
@@ -41,4 +41,4 @@
    **Answer:** c) Clear
 
 4. **Sentence Correction:**  
-   **Answer:** b) They were late to the meeting. -->
+   **Answer:** b) They were late to the meeting.
